# SoA

./: .gitignore  LICENSE  README.md  eslint.config.ts  i18next-parser.config.js  index.html  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
amll/react-full/: tsconfig.json
amll/react-full/src/: test-prebuilt.tsx  test.tsx
locales/base100/: translation.json
locales/base92/: translation.json
locales/en/: translation.json
public/locales/en/: translation.json
scripts/: gen-dev-version.mjs  generate-locales.mjs
src/: App.tsx  LibraryLoader.tsx  base.css  i18n.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/core/: cmd.rs  consts.rs  error.rs  mod.rs  model.rs  pic.rs  playback.rs  query.rs  setup.rs  window.rs
src-tauri/src/meta/: lyric.rs  mod.rs  pic.rs  song.rs
src-tauri/src/misc/: config.rs  error.rs  utils.rs
src-tauri/src/store/db/: mod.rs
src-tauri/src/store/json/: mod.rs
src-tauri/src/store/json/controller/: alist.rs  artist.rs  list.rs  lyric.rs  mod.rs  pic.rs  recent.rs  release.rs  song.rs
src-tauri/src/store/json/entity/: alist.rs  artist.rs  list.rs  mod.rs  recent.rs  release.rs  score.rs  song.rs
src-tauri/src/store/json/op/: alist.rs  artist.rs  list.rs  lyric.rs  mod.rs  pic.rs  recent.rs  release.rs  sm.rs  song.rs
src/components/: PlayerBar.tsx  Sidebar.tsx  legacy.tsx  toys.tsx
src/components/layout/: PlayerBar.tsx  RootLayout.tsx  Sidebar.tsx  Sidebar.tsx.backup
src/components/shared/: AlistCard.tsx  AlistEditDialog.tsx  ArtistCard.tsx  CoverEditDialog.tsx  LyricsDialog.tsx  LyricsDisplay.tsx  PlaylistCard.tsx  PlaylistEditDialog.tsx  ReleaseCard.tsx  ScanProgressIndicator.tsx  SongCoverCard.tsx  SongEditDialog.tsx  SongViewDialog.tsx  soa-icon.tsx
src/components/theme/: ModeToggle.tsx  ThemeProvider.tsx
src/components/ui/: context-menu.tsx  slider.tsx
src/hooks/: useFrontendConfig.ts  useMusic.tsx  usePlayKeyShortcut.ts  useScanProgress.ts  useWindowAlwaysOnTop.ts
src/lib/: alist.ts  api.ts  cover.ts  dndUtils.ts  lyric.ts  releaseUtils.ts  utils.ts  windowState.ts
src/pages/: AlistDetailPage.tsx  AlistsPage.tsx  ArtistDetailPage.tsx  ArtistsPage.tsx  PlaylistDetailPage.tsx  PlaylistsPage.tsx  RecentsPage.columns.tsx  RecentsPage.tsx  ReleaseDetailPage.tsx  ReleasesPage.tsx  ScorePage.tsx  SettingsPage.tsx  SettingsPage.tsx.bak  SettingsPage.tsx.bak2  SongsPage.columns.tsx  SongsPage.datatable.tsx  SongsPage.tsx
src/stores/: alistStore.ts  amllStore.tsx  customCoverStore.ts  dndStore.ts  libraryStore.ts  playerStore.ts  playlistStore.ts  settingStore.ts
src/styles/: LyricsDisplay.css  base.css
src/types/: index.ts
src/utils/: format.ts
src/view/: Library.tsx
