[package]
name = "soa_be"
version = "0.1.0"
description = "A local music scorer"
authors = ["Alesso"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "protocol-asset",
    "macos-private-api",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
base64 = "0.22.1"
glob = "0.3.3"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
dunce = "1.0.5"
regex = "1.11.2"
lazy_static = "1.5.0"
walkdir = "2.5.0"

[lints.clippy]
enum_variant_names = "allow"
